fix: Header z-index, store description, new item shadow and Twitter icon color

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ img {
 
 header {
   width: 100%;
+  z-index: 10;
 }
 
 body {
@@ -52,9 +53,12 @@ body {
   display: flex;
   font-size: 0.9rem;
   padding: 1rem;
-  box-shadow: #d7d7d7 0 0 0.4rem;
   border-radius: 0.8rem;
   gap: 0.3em;
+}
+
+.product:not(.new) {
+  box-shadow: #d7d7d7 0 0 0.4rem;
 }
 
 .product img {
